--- a/Login-and-Signup-Form/index.html
+++ b/Login-and-Signup-Form/index.html
@@ -13,16 +13,16 @@
             <h2>Login</h2>
             <form action="#">
             <div class="input-box">
-                <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                <input type="text" required>
+                <span class="icon"><ion-icon name="person"></ion-icon></span>
+                <input type="text" id="login-username" required>
                 <label>Username</label>
             </div>
             <div class="input-box">
                 <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                <input type="password" required>
+                <input type="password" id="login-password" required>
                 <label>Password</label>
             </div>
-            <button type="submit" class="btn">Login</button>
+            <button type="submit" class="btn" id="login-btn">Login</button>
             <div class="login-register">
                 <p>Don't have an account?<a href="#" class="signup-link"> Signup</a></p>
             </div>
@@ -33,25 +33,25 @@
             <form action="#">
             <div class="input-box">
                 <span class="icon"><ion-icon name="person"></ion-icon></span>
-                <input type="text" required>
+                <input type="text" id="signup-username" required>
                 <label>Username</label>
             </div>
             <div class="input-box">
                 <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                <input type="Email" required>
+                <input type="Email" id="email" required>
                 <label>Email</label>
             </div>
             <div class="input-box">
                 <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                <input type="password" required>
+                <input type="password" id="signup-password" required>
                 <label>Password</label>
             </div>
             <div class="input-box">
                 <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                <input type="password" required>
+                <input type="password" id="confirm-password" required>
                 <label>Confirm Password</label>
             </div>
-            <button type="submit" class="btn">Login</button>
+            <button type="submit" class="btn" id="signup-btn">Signup</button>
             <div class="login-register">
                 <p>Already have an account?<a href="#" class="login-link"> Login</a></p>
             </div>
